# automation

./: pyproject.toml
assets/: potential-contacts.txt
automation/: automation.py
